--- a/IsEmirleri.Web/Views/Customer/Index.cshtml
+++ b/IsEmirleri.Web/Views/Customer/Index.cshtml
@@ -77,7 +77,8 @@
                             }
                         }
                     }
-                ]
+                ],
+                order: [[4, 'asc']]
             });
 
             $("#btnAdd").off().click(() => {
