--- a/IsEmirleri.Web/Views/Customer/GetAllUsersById.cshtml
+++ b/IsEmirleri.Web/Views/Customer/GetAllUsersById.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    int count = 0;
-}
+﻿
 
 <div class="row">
     <div class="col-12">
@@ -188,7 +186,7 @@
                             success: (res) => {
                                 if (res.result) {
                                     let row = $(button).parent().parent();
-                                    DataTable.row(row).data(data.user).draw();
+                                    $('#tblUsers').DataTable().row(row).data(data.user).draw();
                                     toastr.success(res.message);
                                     $("#modalAdd").modal("hide");
                                 }
@@ -198,46 +196,14 @@
                         });
                     });
                 };
-                deleteUser = function (userId, button) {
-                    Swal.fire({
-                        title: "Silmek İstediğinize Emin Misiniz?",
-                        text: "Bu işlem geri alınamayacaktır.",
-                        icon: "warning",
-                        showCancelButton: true,
-                        confirmButtonColor: "#3085d6",
-                        cancelButtonColor: "#d33",
-                        confirmButtonText: "Evet!",
-                        cancelButtonText: "Hayır!"
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            $.ajax({
-                                url: '/User/Delete',
-                                type: 'POST',
-                                data: { id: userId },
-                                success: function () {
-
-                                    let satir = $(button).parent().parent();
-                                    DataTable.row(satir).remove().draw(false);
-                                    toastr.success('Kullanıcı başarıyla silindi.');
-                                },
-                                error: function (err) {
-                                    toastr.error('Kullanıcı silinirken bir hata oluştu: ');
-                                }
-                            });
-
-
-
-                        }
-                    });
-
-                };
+               
                 function fillUserTypes() {
                     $.ajax({
                         url: '/UserType/GetAll',
                         type: 'GET',
                         success: (res) => {
                             $("#ddlUserType").empty();
-                            $("#ddlUserType").append(new Option("Lütfen seçim yapınız", 0));
+                            
                             for (var item of res.data) {
                                 $("#ddlUserType").append(new Option(item.name, item.id));
                             }
@@ -248,5 +214,40 @@
                 
             }
         });
+
+       function deleteUser(userId, button) {
+            Swal.fire({
+                title: "Silmek İstediğinize Emin Misiniz?",
+                text: "Bu işlem geri alınamayacaktır.",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Evet!",
+                cancelButtonText: "Hayır!"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '/User/Delete',
+                        type: 'POST',
+                        data: { id: userId },
+                        success: function (res) {
+
+                            let zz = $(button).parent().parent();
+                         
+                            $('#tblUsers').DataTable().row(zz).draw(false);
+                            toastr.success('Kullanıcı başarıyla silindi.');
+                        },
+                        error: function (err) {
+                            toastr.error('Kullanıcı silinirken bir hata oluştu: ');
+                        }
+                    });
+
+
+
+                }
+            });
+
+        };
     </script>
 }
