--- a/IsEmirleri.Web/Views/User/Login.cshtml
+++ b/IsEmirleri.Web/Views/User/Login.cshtml
@@ -5,12 +5,35 @@
 @{
     Layout = null;
 }
+
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <title>IsEmri Giris</title>
-    <link rel="stylesheet" href="~/css/Login.css">
+
+  
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- App favicon -->
+        <link rel="shortcut icon" href="~/assets/images/favicon.ico">
+
+
+        <link rel="stylesheet" type="text/css" href="~/assets/libs/toastr/build/toastr.min.css">
+        <link href="~/assets/libs/sweetalert2/sweetalert2.min.css" rel="stylesheet" type="text/css" />
+        <!-- Bootstrap Css -->
+        <link href="~/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
+        <!-- Icons Css -->
+        <link href="~/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <!-- App Css-->
+        <link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
+        <link rel="stylesheet" href="~/css/Login.css">
+
+ 
 </head>
 
 <body>
@@ -86,3 +109,41 @@
 </body>
 
 </html>
+
+<script src="~/assets/libs/jquery/jquery.min.js"></script>
+<script src="~/assets/libs/toastr/build/toastr.min.js"></script>
+
+
+<script>
+    toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": false,
+        "positionClass": "toast-top-right",
+        "preventDuplicates": false,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+
+    @if (TempData["error"] != null)
+    {
+        <text>
+            toastr["error"]("@TempData["error"].ToString()");
+        </text>
+    }
+    @if (TempData["success"] != null)
+    {
+        <text>
+            toastr["success"]("@TempData["success"].ToString()");
+        </text>
+    }
+
+
+</script>
