--- a/IsEmirleri.Web/Views/User/Password.cshtml
+++ b/IsEmirleri.Web/Views/User/Password.cshtml
@@ -18,6 +18,7 @@
     <link href="~/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
     <!-- App Css-->
     <link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="~/assets/libs/toastr/build/toastr.min.css">
 
 </head>
 
@@ -81,3 +82,41 @@
     
 </body>
 </html>
+<script src="~/assets/libs/jquery/jquery.min.js"></script>
+<script src="~/assets/libs/toastr/build/toastr.min.js"></script>
+
+
+<script>
+    toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": false,
+        "positionClass": "toast-top-right",
+        "preventDuplicates": false,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+
+    @if (TempData["error"] != null)
+    {
+        <text>
+            toastr["error"]("@TempData["error"].ToString()");
+        </text>
+    }
+    @if (TempData["success"] != null)
+    {
+        <text>
+            toastr["success"]("@TempData["success"].ToString()");
+        </text>
+    }
+
+
+</script>
+
